# playstation_content_ids

./: .gitignore  README.md  es-CO.txt.xz  es-HN.txt.xz  es-MX.txt.xz  es-PE.txt.xz  pyproject.toml
regions/: ar-ae.txt.xz  ar-bh.txt.xz  ar-kw.txt.xz  ar-lb.txt.xz  ar-om.txt.xz  ar-qa.txt.xz  ar-sa.txt.xz  da-dk.txt.xz  de-at.txt.xz  de-ch.txt.xz  de-de.txt.xz  de-lu.txt.xz  en-ZA.txt.xz  en-ae.txt.xz  en-ar.txt.xz  en-au.txt.xz  en-bg.txt.xz  en-bh.txt.xz  en-br.txt.xz  en-ca.txt.xz  en-cl.txt.xz  en-co.txt.xz  en-cy.txt.xz  en-cz.txt.xz  en-dk.txt.xz  en-fi.txt.xz  en-gb.txt.xz  en-gr.txt.xz  en-hk.txt.xz  en-hr.txt.xz  en-hu.txt.xz  en-id.txt.xz  en-ie.txt.xz  en-il.txt.xz  en-in.txt.xz  en-is.txt.xz  en-kw.txt.xz  en-lb.txt.xz  en-mt.txt.xz  en-mx.txt.xz  (+51 more)
scripts/: lzma_files.py  merge.py  old_psn_product_fetcher.py
